--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4.2.2
 
     - name: Install aqua
       uses: aquaproj/aqua-installer@v3.0.1
@@ -24,40 +24,22 @@ jobs:
       run: go test -v -race -coverprofile=coverage.out ./...
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v4.6.0
       with:
         file: ./coverage.out
         flags: unittests
         fail_ci_if_error: false
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Install aqua
-      uses: aquaproj/aqua-installer@v3.0.1
-      with:
-        aqua_version: v2.25.1
-        enable_aqua_install: true
-        aqua_opts: ""
-
-    - name: golangci-lint
-      uses: golangci/golangci-lint-action@v6
-      with:
-        version: latest
-        args: --timeout=5m
-
   build:
     runs-on: ubuntu-latest
-    needs: [test, lint]
+    needs: [test]
     
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4.2.2
 
     - name: Install aqua
       uses: aquaproj/aqua-installer@v3.0.1
